--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -49,3 +49,14 @@
         font-size: 24px;
     }
 }
+
+@media only screen and (max-width: 900px) {
+    #home__content {
+        width: 70%;
+        row-gap: 50px;
+    }
+
+    #home__content h1 {
+        font-size: 30px;
+    }
+}
