--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -34,7 +34,7 @@
     }
 }
 
-@media only screen and (max-width: 900px) {
+@media only screen and (min-width: 600px) and (max-width: 900px) {
     .button {
         font-size: 25px;
         padding: 10px 25px;
