--- a/src/components/google-login/google-login.css
+++ b/src/components/google-login/google-login.css
@@ -1,3 +1,8 @@
 .login-google {
-    transform: scale(1.5);
+    transform: scale(1.25);
+}
+@media only screen and (min-width: 900px) {
+    .login-google {
+        transform: scale(1.5);
+    }
 }
