--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,56 @@
   box-sizing: content-box;
 }
 
-.App {
-  width: 100%;
-  height: 100vh;
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Quicksand', sans-serif;
+  color: #404462;
+}
+
+a {
+  text-decoration: none;
+}
+
+p {
+  font-family: 'Poppins', sans-serif;
+}
+
+h4 {
+  font-size: 1.8rem;
+  letter-spacing: 0.25%;
+  font-weight: 600;
+}
+
+h3 {
+  font-size: 1.5rem;
+  letter-spacing: 0.25%;
+  font-weight: 600;
+}
+
+h2 {
+  font-size: 1.2rem;
+  letter-spacing: 0.25%;
+  font-weight: 600;
+}
+
+hr {
+  border-width: 0;
+  height: 1px;
+  background-color: #404462;
+}
+
+@media (min-width: 600px) {
+  ::-webkit-scrollbar {
+    width: 20px;
+  }
+  
+  ::-webkit-scrollbar-track {
+    background: none;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background: #B2BAFF;
+    border-radius: 10px;
+    background-clip: content-box;
+    border: 6px solid rgba(0, 0, 0, 0);
+  }
 }
