--- a/src/pages/dashboard/dashboard.css
+++ b/src/pages/dashboard/dashboard.css
@@ -1,5 +1,5 @@
 .dashboard {
-    background-color: #B2BAFF;
+    background-color: #8A96FF;
     width: 100%;
     height: 100vh;
     display: flex;
