--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;1,400;1,500;1,600&family=Quicksand:wght@300;400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;1,400;1,500;1,600&family=Quicksand:wght@300;400;500;600;700&display=swap");
 
 * {
   margin: 0;
@@ -6,8 +6,13 @@
   box-sizing: content-box;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  font-family: 'Quicksand', sans-serif;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Quicksand", sans-serif;
   color: #404462;
 }
 
@@ -16,7 +21,8 @@ a {
 }
 
 p {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
+  color: #404462;
 }
 
 h4 {
@@ -43,17 +49,21 @@ hr {
   background-color: #404462;
 }
 
+.header {
+  color: #ffffff;
+}
+
 @media (min-width: 600px) {
   ::-webkit-scrollbar {
     width: 20px;
   }
-  
+
   ::-webkit-scrollbar-track {
     background: none;
   }
-  
+
   ::-webkit-scrollbar-thumb {
-    background: #B2BAFF;
+    background: #b2baff;
     border-radius: 10px;
     background-clip: content-box;
     border: 6px solid rgba(0, 0, 0, 0);
