--- a/src/layouts/activities/activities.css
+++ b/src/layouts/activities/activities.css
@@ -3,7 +3,6 @@
     display: flex;
     row-gap: 10px;
     position: relative;
-    flex-wrap: wrap;
     flex-flow: column;
 }
 
@@ -13,10 +12,9 @@
     flex-direction: column;
     row-gap: 5px;
     flex: 1;
-    flex-basis: 0;
 }
 
-.activities .container {
+.container {
     width: auto;
     background-color: #FFFFFF;
     border-radius: 10px;
@@ -31,7 +29,7 @@
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
 }
 
-.activities .content {
+.content {
     display: flex;
     flex-direction: column;
     row-gap: 10px;
