--- a/src/layouts/exam-content/exam-content.css
+++ b/src/layouts/exam-content/exam-content.css
@@ -26,6 +26,7 @@
     overflow: hidden;
     position: relative;
     transition: .3s ease-in-out;
+    cursor: pointer;
 }
 
 .exam-content-buttons-button:hover {
