--- a/src/layouts/creation-view/creation-view.css
+++ b/src/layouts/creation-view/creation-view.css
@@ -1,5 +1,5 @@
 .creation-view {
-    position: absolute;
+    position: fixed;
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, .25);
@@ -7,5 +7,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 1000;
+    top: 0;
+    left: 0;
+    z-index: 1005;
 }
