--- a/src/components/creation-card/creation-card.css
+++ b/src/components/creation-card/creation-card.css
@@ -144,3 +144,7 @@
 	box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05), inset 15px 10px -12px rgba(255,255,255,0.1);
 	color: #99a1a7;
 }
+
+.creation-card-loader {
+    position: absolute;
+}
