--- a/src/layouts/course-bar/course-bar.css
+++ b/src/layouts/course-bar/course-bar.css
@@ -4,3 +4,12 @@
     align-items: center;
     width: auto;
 }
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+}
+
+@media screen and (max-width: 767px) {
+    .course-bar {
+        height: 100px;
+    }
+}
