--- a/src/layouts/exam-info/exam-info.css
+++ b/src/layouts/exam-info/exam-info.css
@@ -13,3 +13,37 @@
   flex: 1;
   row-gap: 10px;
 }
+
+.exam-info-content-data {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  row-gap: 10px;
+}
+
+.exam-info-content-dates {
+  display: flex;
+  flex-direction: column;
+  row-gap: 10px;
+}
+
+.exam-info-content-values {
+  display: flex;
+  flex-direction: column;
+  row-gap: 10px;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+}
+
+@media screen and (max-width: 767px) {
+  .exam-info-content-data {
+    flex-direction: row-reverse;
+    column-gap: 10px;
+  }
+
+  .exam-info-content-dates {
+    width: 40%;
+    min-width: 40%;
+  }
+}
