--- a/src/App.css
+++ b/src/App.css
@@ -70,3 +70,27 @@ hr {
     border: 6px solid rgba(0, 0, 0, 0);
   }
 }
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  
+}
+
+@media screen and (max-width: 767px) {
+  h4 {
+    font-size: 1.5rem;
+    letter-spacing: 0.25%;
+    font-weight: 600;
+  }
+  
+  h3 {
+    font-size: 1.1rem;
+    letter-spacing: 0.25%;
+    font-weight: 600;
+  }
+  
+  h2 {
+    font-size: 0.9rem;
+    letter-spacing: 0.25%;
+    font-weight: 600;
+  }
+}
