--- a/src/components/average-card-course/average-card-course.css
+++ b/src/components/average-card-course/average-card-course.css
@@ -44,3 +44,13 @@
   bottom: -100%;
   box-shadow: inset 0px 0px 10px rgba(0, 0, 0, 0.15);
 }
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+}
+
+@media screen and (max-width: 767px) {
+  .average-card-course {
+    width: 40%;
+    min-width: 40%;
+  }
+}
