--- a/src/components/course-card/course-card.css
+++ b/src/components/course-card/course-card.css
@@ -23,3 +23,13 @@
     max-height: 60px;
     overflow: hidden;
 }
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  
+}
+
+@media screen and (max-width: 767px) {
+    .course-card-name {
+        font-size: 1.3rem;
+    }
+}
