--- a/src/components/date-info-card/date-info-card.css
+++ b/src/components/date-info-card/date-info-card.css
@@ -6,7 +6,21 @@
   overflow: hidden;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   padding: 5px;
   padding-left: 10px;
   padding-right: 20px;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+}
+
+@media screen and (max-width: 767px) {
+  .date-info-card {
+    height: 50%;
+  }
+
+  .date-info-card-title{
+    font-size: 1.2rem;
+  }
 }
