--- a/src/components/info-activities-card/info-activities-card.css
+++ b/src/components/info-activities-card/info-activities-card.css
@@ -15,12 +15,12 @@
 }
 
 .info-activities-card-circle {
-  height: 75px;
-  width: 75px;
+  height: 100px;
+  width: 100px;
   background: #b2baff;
   border-radius: 100%;
   position: absolute;
-  right: -2%;
+  right: -5%;
   box-shadow: inset 0px 0px 10px rgba(0, 0, 0, 0.15);
   z-index: 1;
 }
@@ -29,4 +29,32 @@
 .info-activities-card-title, .info-activities-card-counter {
   position: relative;
   z-index: 2;
+}
+
+.info-activities-card-title {
+  width: auto;
+  padding-right: 20px;
+}
+
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+}
+
+@media screen and (max-width: 767px) {
+  .info-activities-card {
+    padding-right: 10px;
+    height: 50%;
+  }
+
+  .info-activities-card-circle {
+    right: -20%;
+  }
+
+  .info-activities-card-title {
+    font-size: 1rem;
+  }
+
+  .info-activities-card-counter {
+    font-size: 2.5rem;
+  }
 }
