--- a/src/components/user-info-card/user-info-card.css
+++ b/src/components/user-info-card/user-info-card.css
@@ -51,3 +51,31 @@
   font-weight: 500;
   font-size: 1.3rem;
 }
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+}
+
+@media screen and (max-width: 767px) {
+  .user-info-card {
+    width: auto;
+    flex-direction: row-reverse;
+    padding: 10px 10px;
+    column-gap: 10px;
+  }
+
+  .user-info-card-data {
+    width: auto;
+    align-items: flex-start;
+  }
+
+  .user-info-card-data-title {
+    font-size: 1.3rem;
+  }
+
+  .user-info-card-data-name {
+    width: 100%;
+    text-align: left;
+    font-weight: 600;
+    font-size: 1rem;
+  }
+}
