--- a/src/layouts/activities/activities.css
+++ b/src/layouts/activities/activities.css
@@ -35,7 +35,42 @@
     row-gap: 10px;
 }
 
-@media (max-width: 600px) {
+.course-students-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: auto;
+    padding: 10px;
+    height: 60px;
+    background-color: #FFFFFF;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
+}
+
+.course-students-container-content {
+    display: flex;
+    align-items: center;
+    column-gap: 5px;
+}
+
+.add-student {
+    background: none;
+    border: none;
+    font-family: 'Quicksand', sans-serif;
+    font-size: 1.4rem;
+    font-weight: 600;
+    width: 120px;
+    overflow: hidden;
+    text-align: center;
+    color: #404462;
+    cursor: pointer;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  
+}
+
+@media screen and (max-width: 767px) {
     .activities {
         width: 100%;
     }
