--- a/src/layouts/course-info/course-info.css
+++ b/src/layouts/course-info/course-info.css
@@ -17,8 +17,29 @@
   flex-basis: 0;
 }
 
-@media (max-width: 600px) {
+.course-info-content-values {
+  display: flex;
+  flex-direction: column;
+  row-gap: 10px;
+}
+
+.course-info-content-values-activities {
+  display: flex;
+  flex-direction: column;
+  row-gap: 10px;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+}
+
+@media screen and (max-width: 767px) {
   .course-info  {
     width: 100%;
+  }
+
+  .course-info-content-values {
+    width: 100%;
+    flex-direction: row-reverse;
+    column-gap: 10px;
   }
 }
