--- a/src/layouts/courses/courses.css
+++ b/src/layouts/courses/courses.css
@@ -23,7 +23,10 @@
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
 }
 
-@media (max-width: 600px) {
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+}
+
+@media screen and (max-width: 767px) {
   .courses {
     width: 100%;
   }
