--- a/src/layouts/dashboard-averages/dashboard-averages.css
+++ b/src/layouts/dashboard-averages/dashboard-averages.css
@@ -10,3 +10,14 @@
     display: flex;
     column-gap: 20px;
 }
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  
+}
+
+@media screen and (max-width: 767px) {
+    .dashboard-averages__averages {
+        width: 100%;
+        column-gap: 15px;
+    }
+}
