--- a/src/layouts/dashboard-home/dashboard-home.css
+++ b/src/layouts/dashboard-home/dashboard-home.css
@@ -11,7 +11,7 @@
     overflow-y: auto;
 }
 
-.sections {
+.sections-home {
     width: 100%;
     display: flex;
     column-gap: 20px;
@@ -19,12 +19,18 @@
     flex: 1;
 }
 
-@media (max-width: 600px) {
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  
+}
+
+@media screen and (max-width: 767px) {
     .dashboard-home {
         height: auto;
+        padding: 10px 10px;
     }
 
-    .sections {
+    .sections-home {
         flex-direction: column;
+        row-gap: 10px;
     }
 }
