--- a/src/layouts/activities/activities.css
+++ b/src/layouts/activities/activities.css
@@ -40,10 +40,12 @@
     align-items: center;
     justify-content: space-between;
     width: auto;
+    overflow: hidden;
     padding: 10px;
     height: 60px;
     background-color: #FFFFFF;
     border-radius: 10px;
+    column-gap: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
 }
 
@@ -51,6 +53,8 @@
     display: flex;
     align-items: center;
     column-gap: 5px;
+    flex-grow: 1;
+    overflow: hidden;
 }
 
 .add-student {
@@ -59,7 +63,7 @@
     font-family: 'Quicksand', sans-serif;
     font-size: 1.4rem;
     font-weight: 600;
-    width: 120px;
+    width: 9rem;
     overflow: hidden;
     text-align: center;
     color: #404462;
@@ -77,5 +81,9 @@
 
     .activities-unfilled, .activities-filled{
         flex-basis: 265px;
+    }
+
+    .add-student {
+        width: 18rem;
     }
 }
